--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pinia-plugin-persist",
-  "version": "1.0.0-beta.1",
+  "name": "pinia-plugin-persistedstore",
+  "version": "1.0.0-beta.2",
   "description": "赋予 pinia 持久化的能力",
   "main": "dist/index.min.js",
   "module": "dist/index.esm.js",
@@ -17,7 +17,9 @@
     "pinia",
     "persist",
     "vuex",
-    "vue3"
+    "vue3",
+    "persiststate",
+    "vue"
   ],
   "license": "ISC",
   "devDependencies": {
@@ -41,5 +43,9 @@
   },
   "dependencies": {
     "sunshine-storage": "1.0.0-beta.7"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:sanxin-lin/pinia-persist.git"
   }
 }
