--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pinia-plugin-persistedstore",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0",
   "description": "赋予 pinia 持久化的能力",
   "main": "dist/index.min.js",
   "module": "dist/index.esm.js",
@@ -19,7 +19,10 @@
     "vuex",
     "vue3",
     "persiststate",
-    "vue"
+    "vue",
+    "pinia-plugin",
+    "pinia-plugin-persist",
+    "pinia-plugin-persistedstate"
   ],
   "license": "ISC",
   "devDependencies": {
